# Pav-S_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/libuvc/lib/: libuvc.so.0.0.7
log/: latest_build
src/bev_obstacle_detector/: package.xml  setup.cfg  setup.py
src/bev_obstacle_detector/bev_obstacle_detector/: ipm_cmd_vel_node.py  ipm_node copy.py  ipm_node.py  ipm_node.py.bak  ipm_node.py.double.bak  pointcloud_merger_node copy.py  pointcloud_merger_node.py
src/bev_obstacle_detector/config/: bev_cmdvel.yaml  bev_params.yaml  merger_params.yaml
src/bev_obstacle_detector/launch/: bev_cmdvel.launch.py  (+2 more)
src/cmd_vel_tools/: package.xml  scan.txt  setup.cfg  setup.py
src/cmd_vel_tools/cmd_vel_tools/: cmd_vel_limiter.py  debug_node.py  obstacle_analyzer.py  red_segment.py  red_stop.py
src/cmd_vel_tools/resource/: cmd_vel_tools
src/costmap_process/: costmap_chalu.txt  costmap_huandao.txt  fake_view.rviz  package.xml  setup.cfg  setup.py
src/distance_detector/: package.xml  setup.cfg  setup.py
src/distance_detector/config/: distance_params.yaml
src/distance_detector/distance_detector/: distance_node.py  distance_node_cv.py
src/distance_detector/launch/: distance_detect.launch.py
src/distance_detector_msg/: CMakeLists.txt  package.xml
src/red_segment_msg/: CMakeLists.txt  package.xml
src/robot_kcf/: CMakeLists.txt  package.xml
src/ros2_astra_camera-master/: README.MD
src/script/: dump_vis_costmap.py  get_lidar.py  get_rgbd.py  global_costmap.csv  global_costmap.npy  livox_cloud.pcd
src/turn_on_wheeltec_robot/: wheeltec_udev.sh
src/yolo_detector/: Readme.md  env.md  package.xml  setup.py
src/yolov5_lib/: Readme.md  setup.cfg  setup.py
(+330 files in other folders)
