<?xml version="1.0"?>
<package format="3">
  <name>cmd_vel_tools</name>
  <version>0.1.0</version>
  <description>Velocity limiting and odometry distance tracking nodes decoupled from YOLO package.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>vision_msgs</depend>
  <depend>red_segment_msg</depend>


  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


